[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tyre-pulse-analytics"
version = "1.0.0"
description = "Tyre Pulse analytics microservice: predictive tyre life, cost forecasting, anomaly detection, demand forecasting."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "asyncpg>=0.29,<1",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"
